--- a/styles/global.css
+++ b/styles/global.css
@@ -20,3 +20,16 @@ a {
   max-width: 90vw;
   margin: 0 auto;
 }
+
+footer {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: center;
+  margin: 48px 0 32px;
+  cursor: default;
+}
+
+footer a {
+  color: #339;
+}
