--- a/styles/global.css
+++ b/styles/global.css
@@ -33,3 +33,12 @@ footer {
 footer a {
   color: #339;
 }
+
+.loading {
+  text-align: center;
+  margin: 50px 0;
+}
+
+.text-center {
+  text-align: center;
+}
